--- a/debts.html
+++ b/debts.html
@@ -203,7 +203,7 @@
         }
 
         .toggle-button {
-            background: url('E:/GTA_Interface_Project/images/arrow.png') no-repeat center center;
+            background: url('images/arrow.png') no-repeat center center;
             background-size: contain;
             width: 20px;
             height: 20px;
