--- a/debts.html
+++ b/debts.html
@@ -275,9 +275,9 @@
         <audio id="incomeSound" src="sounds/income.mp3"></audio>
         <audio id="expenseSound" src="sounds/expense.mp3"></audio>
         <audio id="debtSound" src="sounds/ApplePaySuccess.mp3"></audio>
-        <audio id="hoverSound" src="E:/GTA_Interface_Project/sounds/gta-menu.wav"></audio>
-        <audio id="clickSound" src="E:/GTA_Interface_Project/sounds/open.wav"></audio>
-        <audio id="backSound" src="E:/GTA_Interface_Project/sounds/back.wav"></audio>
+        <audio id="hoverSound" src="sounds/gta-menu.wav"></audio>
+        <audio id="clickSound" src="sounds/open.wav"></audio>
+        <audio id="backSound" src="sounds/back.wav"></audio>
 
     </div>
 
